--- a/Kitodo/src/main/webapp/pages/error.xhtml
+++ b/Kitodo/src/main/webapp/pages/error.xhtml
@@ -12,17 +12,11 @@
  *
 -->
 
-<!-- TODO: refactor template to replace JAVA scriptlet -->
-<!--<%@ page-->
-        <!--import="java.io.PrintWriter,java.util.List,org.apache.myfaces.shared_tomahawk.util.ExceptionUtils"-->
-        <!--isErrorPage="true" %>-->
-
 <html
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    xmlns:t="http://myfaces.apache.org/tomahawk"
     >
     <f:view locale="#{LanguageForm.locale}">
         <h:body>
@@ -40,7 +34,7 @@
                             </h:panelGroup>
                         </h:panelGrid>
                         <!-- // Breadcrumb -->
-                        <t:div forceId="true" id="mydiv">
+                        <div  id="mydiv">
                             <h:form id="myform" style="margin:3px">
                                 <!-- Überschrift -->
                                 <h3>
@@ -108,7 +102,7 @@
                                 <!--%>-->
 
                             </h:form>
-                        </t:div>
+                        </div>
                         <!-- ++++++++++++++++    // Inhalt      ++++++++++++++++ -->
 
                     </td>
